kubernetes-networks/dashboard/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-dashboard
  namespace: kubernetes-dashboard
  labels:
    name: kube-dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/dashboard"
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
